--- a/_posts/2021-01-01-research.md
+++ b/_posts/2021-01-01-research.md
@@ -5,6 +5,6 @@ category: research
 
 Last updated: 2022-12-05
 
-| Title                                                                        | Co-Author(s) <div style="width:100px">property</div>   | Status  <div style="width:100px">property</div>|
+| Title                                                                        | <div style="width:100px">Co-Author(s)</div>   | <div style="width:100px">Status</div> |
 |                                   -------------                              |                        :-------------:                 |                    -----:                      |
 | [Recursivity and the Estimation of Dynamic Games with Continuous Controls](https://raw.githubusercontent.com/gfrt0/gfrt0.github.io/e57451a6285d3bc92b291a7ef3f87fda0dc84eea/content/fg_dgs.pdf)     | João Granja                                            | Working Paper                             |
