--- a/_posts/2021-01-01-research.md
+++ b/_posts/2021-01-01-research.md
@@ -7,4 +7,4 @@ Last updated: 2022-12-05
 
 |                                    Title                                  |                         Co-Author(s)                   |                   Status                       |
 |                                -------------                              |                      :----------------:                |                :----------:                    |
-| [Recursivity and the Estimation of Dynamic Games with Continuous Controls](https://raw.githubusercontent.com/gfrt0/gfrt0.github.io/e57451a6285d3bc92b291a7ef3f87fda0dc84eea/content/fg_dgs.pdf)     | João Granja                                            | Working Paper                             |
+| [Recursivity and the Estimation of Dynamic Games with Continuous Controls](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/fg_dgs.pdf)     | João Granja                                            | Working Paper                             |
