--- a/_posts/2021-01-01-research.md
+++ b/_posts/2021-01-01-research.md
@@ -7,4 +7,7 @@ Last updated: 2022-12-05
 
 |                                    Title                                  |                         Co-Author(s)                   |                   Status                       |
 |                                -------------                              |                      :----------------:                |                :----------:                    |
-| [Recursivity and the Estimation of Dynamic Games with Continuous Controls](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/fg_dgs.pdf)     | João Granja                                            | Working Paper                             |
+| [Recursivity and the Estimation of Dynamic Games with Continuous Controls](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/fg_dgs.pdf) | [João Granja](https://www.joaogranja.net/) (UCL) | Working Paper |
+
+
+![ghost](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/ghost.webp)
