--- a/_posts/2021-01-01-research.md
+++ b/_posts/2021-01-01-research.md
@@ -10,4 +10,4 @@ Last updated: 2022-12-05
 | [Recursivity and the Estimation of Dynamic Games with Continuous Controls](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/fg_dgs.pdf) | [João Granja](https://www.joaogranja.net/) (UCL) | Working Paper |
 
 
-![ghost](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/ghost.webp)
+![ghost](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/ghost.webp){: width="100" }
