--- a/_posts/2021-01-01-research.md
+++ b/_posts/2021-01-01-research.md
@@ -5,9 +5,9 @@ category: research
 
 Last updated: 2022-12-05
 
-|                                    Title                                  |                         Co-Author(s)                   |                   Status                       |
+|                                    title                                  |                         co-author(s)                   |                   status                       |
 |                                -------------                              |                      :----------------:                |                :----------:                    |
-| [Recursivity and the Estimation of Dynamic Games with Continuous Controls](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/fg_dgs.pdf) | [João Granja](https://www.joaogranja.net/) (UCL) | Working Paper |
+| [recursivity and the estimation of dynamic games with continuous controls](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/fg_dgs.pdf) | [joão granja](https://www.joaogranja.net/) (ucl) | working paper |
 
 
 ![ghost](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/ghost.webp){: width="100" }
