--- a/_posts/2021-01-01-research.md
+++ b/_posts/2021-01-01-research.md
@@ -8,6 +8,7 @@ Last updated: 2023-04-20
 |                                    title                                  |                         co-author(s)                   |                   status                       |
 |                                -------------                              |                      :----------------:                |                :----------:                    |
 | [recursivity and the estimation of dynamic games with continuous controls](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/fg_dgs.pdf) | [joão granja](https://www.joaogranja.net/) (ucl) | working paper |
+| [identification of dynamic auctions with incomplete data](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/note_jfp.pdf) | | note |
 
 
 ![ghost](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/ghost.webp){: width="100" }
