--- a/_posts/2021-01-01-research.md
+++ b/_posts/2021-01-01-research.md
@@ -4,18 +4,19 @@ category: research
 title: gf - research
 ---
 
-Last updated: 2024-03-13
+Last updated: 2024-12-06
 
 | title | co-author(s) | status |
 | --- | :---: | :---: |
 | [recursivity and the estimation of dynamic games with continuous controls](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/fg_dgs.pdf) | [joão granja](https://www.joaogranja.net/) (ucl) | working paper |
 | asymmetric information and learning by doing in california photovoltaic | | work in progress |
 | voluntary nutrient labelling in equilibrium: uk cereal, 2005 – 2021 | [joão granja](https://www.joaogranja.net/) (ucl) | work in progress |
-| [identification of dynamic auctions with incomplete data](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/note_jfp.pdf) | | note |
-| network effects in medicare part d opioid prescription behaviour | | dormant |
-| [the impact of migration on productivity: evidence from the united kingdom](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/CampoFortePortes2024.pdf) | [jonathan portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (kcl) <br /> [francesco campo](https://sites.google.com/view/francescocampoecon/) (padua) | published |
+| [the impact of migration on productivity: evidence from the united kingdom](https://www.degruyter.com/document/doi/10.1515/bejeap-2023-0179/html) | [jonathan portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (kcl) <br /> [francesco campo](https://sites.google.com/view/francescocampoecon/) (padua) | published |
 | [immigration policy after brexit](https://www.gov.wales/sites/default/files/publications/2018-10/brexit-and-fair-movement-of-people.pdf) | [jonathan portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (kcl) | published |
-| [macroeconomic determinants of international migration to the uk](https://www.econstor.eu/bitstream/10419/157923/1/GLO_DP_0069.pdf) | [jonathan portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (kcl) | dormant |
 | [the economic impact of brexit-induced reductions in migration](https://academic.oup.com/oxrep/article/33/suppl_1/S31/3066076/The-economic-impact-of-Brexit-induced-reductions) | [jonathan portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (kcl) | published |
+| [macroeconomic determinants of international migration to the uk](https://www.econstor.eu/bitstream/10419/157923/1/GLO_DP_0069.pdf) | [jonathan portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (kcl) | dormant |
+| network effects in medicare part d opioid prescription behaviour | | dormant |
+
+<!--- | [identification of dynamic auctions with incomplete data](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/note_jfp.pdf) | | note | -->
 
 ![ghost](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/ghost.webp){: width="100" }
