update research page

--- a/_posts/2021-01-01-research.md
+++ b/_posts/2021-01-01-research.md
@@ -4,19 +4,26 @@ category: research
 title: gf - research
 ---
 
-Last updated: 2024-12-06
+Last updated: 2026-01-16
+
+## PhD Research
 
 | title | co-author(s) | status |
 | --- | :---: | :---: |
-| [recursivity and the estimation of dynamic games with continuous controls](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/fg_dgs.pdf) | [joão granja](https://www.joaogranja.net/) (ucl) | working paper |
-| asymmetric information and learning by doing in california photovoltaic | | work in progress |
-| voluntary nutrient labelling in equilibrium: uk cereal, 2005 – 2021 | [joão granja](https://www.joaogranja.net/) (ucl) | work in progress |
-| [the impact of migration on productivity: evidence from the united kingdom](https://www.degruyter.com/document/doi/10.1515/bejeap-2023-0179/html) | [jonathan portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (kcl) <br /> [francesco campo](https://sites.google.com/view/francescocampoecon/) (padua) | published |
-| [immigration policy after brexit](https://www.gov.wales/sites/default/files/publications/2018-10/brexit-and-fair-movement-of-people.pdf) | [jonathan portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (kcl) | published |
-| [the economic impact of brexit-induced reductions in migration](https://academic.oup.com/oxrep/article/33/suppl_1/S31/3066076/The-economic-impact-of-Brexit-induced-reductions) | [jonathan portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (kcl) | published |
-| [macroeconomic determinants of international migration to the uk](https://www.econstor.eu/bitstream/10419/157923/1/GLO_DP_0069.pdf) | [jonathan portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (kcl) | dormant |
-| network effects in medicare part d opioid prescription behaviour | | dormant |
+| An Empirical Model of Online Ratings Supply and Demand | | work in progress (job market paper) |
+| [Recursivity and the Estimation of Dynamic Games with Continuous Controls](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/fg_dgs.pdf) | [João Granja](https://www.joaogranja.net/) (UCL) | working paper |
+| Semiparametric Estimation of Continuous Control Decision Problems | [João Granja](https://www.joaogranja.net/) (UCL) | work in progress |
 
+## Pre-PhD Research
+
+| title | co-author(s) | status |
+| --- | :---: | :---: |
+| [The Impact of Migration on Productivity: Evidence from the United Kingdom](https://www.degruyter.com/document/doi/10.1515/bejeap-2023-0179/html) | [Jonathan Portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (KCL) <br /> [Francesco Campo](https://sites.google.com/view/francescocampoecon/) (Padua) | published |
+| [Immigration Policy after Brexit](https://www.gov.wales/sites/default/files/publications/2018-10/brexit-and-fair-movement-of-people.pdf) | [Jonathan Portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (KCL) | published |
+| [The Economic Impact of Brexit-induced Reductions in Migration](https://academic.oup.com/oxrep/article/33/suppl_1/S31/3066076/The-economic-impact-of-Brexit-induced-reductions) | [Jonathan Portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (KCL) | published |
+| [Macroeconomic Determinants of International Migration to the UK](https://www.econstor.eu/bitstream/10419/157923/1/GLO_DP_0069.pdf) | [Jonathan Portes](https://www.kcl.ac.uk/people/professor-jonathan-portes) (KCL) | dormant |
+| Network Effects in Medicare Part D Opioid Prescription Behaviour | | dormant |
+<!-- | voluntary nutrient labelling in equilibrium: uk cereal, 2005 – 2021 | [joão granja](https://www.joaogranja.net/) (ucl) | work in progress | -->
 <!--- | [identification of dynamic auctions with incomplete data](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/note_jfp.pdf) | | note | -->
 
 ![ghost](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/ghost.webp){: width="100" }
