--- a/_posts/2021-01-01-research.md
+++ b/_posts/2021-01-01-research.md
@@ -10,7 +10,7 @@ Last updated: 2026-01-16
 
 | title | co-author(s) | status |
 | --- | :---: | :---: |
-| An Empirical Model of Online Ratings Supply and Demand | | work in progress (job market paper) |
+| An Empirical Model of Online Ratings Supply and Demand | | work in progress <br /> job market paper |
 | [Recursivity and the Estimation of Dynamic Games with Continuous Controls](https://github.com/gfrt0/gfrt0.github.io/raw/master/content/fg_dgs.pdf) | [João Granja](https://www.joaogranja.net/) (UCL) | working paper |
 | Semiparametric Estimation of Continuous Control Decision Problems | [João Granja](https://www.joaogranja.net/) (UCL) | work in progress |
 
